Don't need coverage in project that only contains test code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,7 @@ jobs:
       - run: "sbt test:compile"
       - run: "sbt scalafmtSbtCheck"
       - run: "sbt dependencyUpdatesFailBuild"
-      - run: "sbt coverage test"
-      - run: "sbt coverageReport"
-      - run: "sbt coverageAggregate"
+      - run: "sbt test"
       - run: "sbt codacyCoverage"
       - run: "sbt scalastyle"
       - run: "sbt scapegoat"
