--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,12 @@ jobs:
           paths:
             - ~/.iv2/cache/
             - ~/.sbt/
+            - ~/.coursier
             - ~/.m2/
       - run: "sbt compile"
       - run: "sbt test:compile"
       - run: "sbt scalafmtSbtCheck"
+      - run: "sbt test:scalafix"
       - run: "sbt dependencyUpdatesFailBuild"
       - run: "sbt test"
       - run: "sbt scalastyle"
