Add defaults for scalafix syntax checks

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -6,3 +6,18 @@ rules = [
   NoValInForComprehension
   ProcedureSyntax
 ]
+DisableSyntax.noVars = true
+DisableSyntax.noThrows = true
+DisableSyntax.noNulls = true
+DisableSyntax.noReturns = true
+DisableSyntax.noWhileLoops = true
+DisableSyntax.noAsInstanceOf = false
+DisableSyntax.noIsInstanceOf = true
+DisableSyntax.noXml = true
+DisableSyntax.noDefaultArgs = true
+DisableSyntax.noFinalVal = true
+DisableSyntax.noFinalize = true
+DisableSyntax.noValPatterns = true
+DisableSyntax.noUniversalEquality = false
+DisableSyntax.noUniversalEqualityMessage = "== and != are unsafe since they allow comparing two unrelated types"
+DisableSyntax.regex = []
