--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -5,7 +5,13 @@ rules = [
   LeakingImplicitClassVal
   NoValInForComprehension
   ProcedureSyntax
+  SortImports
 ]
+
+RemoveUnused.imports = true
+RemoveUnused.privates = true
+RemoveUnused.locals = true
+
 DisableSyntax.noVars = true
 DisableSyntax.noThrows = true
 DisableSyntax.noNulls = true
@@ -21,3 +27,10 @@ DisableSyntax.noValPatterns = true
 DisableSyntax.noUniversalEquality = false
 DisableSyntax.noUniversalEqualityMessage = "== and != are unsafe since they allow comparing two unrelated types"
 DisableSyntax.regex = []
+
+SortImports.blocks = [
+  "java.",
+  "scala.",
+  "*",
+  "com.sun."
+]
