--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,6 @@ jobs:
       - run: "sbt 'test:scalafix --check'"
       - run: "sbt dependencyUpdatesFailBuild"
       - run: "sbt test"
-      - run: "sbt scalastyle"
+      - run: "sbt test:scalastyle"
       - run: "sbt scapegoat"
       - run: "sbt -Dsonar.login=$SONAR_LOGIN sonarScan"
