--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
       - run: "sbt compile"
       - run: "sbt test:compile"
       - run: "sbt scalafmtSbtCheck"
+      - run: "sbt scalafmtCheck"
+      - run: "sbt test:scalafmtCheck
       - run: "sbt 'test:scalafix --check'"
       - run: "sbt dependencyUpdatesFailBuild"
       - run: "sbt test"
