--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       - run: "sbt scalafmtSbtCheck"
       - run: "sbt scalafmtCheck"
       - run: "sbt test:scalafmtCheck"
+      - run: "sbt 'scalafix --check'"
       - run: "sbt 'test:scalafix --check'"
       - run: "sbt dependencyUpdatesFailBuild"
       - run: "sbt test"
